--- a/index.html
+++ b/index.html
@@ -1,12 +1,173 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/76e3e2258f.js" crossorigin="anonymous"></script>
+    <title>My Portfolio</title>
+    <style>
+        *{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: black;
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        table, td, th {
+
+            /* border: 1px solid black;  */
+        }
+        table{
+            background-image: linear-gradient(rgb(92, 176, 202), rgb(255, 255, 255));
+            border-collapse: collapse;
+            width: 98.7vw;
+        }
+        td{
+            text-align: center;
+        }
+        #header{
+            font-size: 2rem;
+            border-bottom: 2px solid black;
+        }
+        #header th{
+            padding: 1.5rem 0.3rem;
+        }
+        #about td{
+            padding: 1.5rem 0.3rem;
+        }
+        #about h1{
+            font-size: 3rem;
+        }
+        #exp,#ach{
+            font-size: 5rem;
+            border-bottom: 3px solid black;
+        }
+        #exp td, #ach td{
+            padding: 1.5rem 0.3rem;
+        }
+        .deep{
+            font-size: 1.5rem;
+            border-bottom: 1.1px solid black;
+        }
+        .deep td{
+            padding: 1.5rem 0.3rem;
+        }
+        #footer{
+            background-color:rgb(117, 225, 255),rgb(255, 255, 255);
+        }
+        #footer th{
+            padding: 1.1rem;
+        }
+        a{
+            text-decoration: none;
+        }
+    </style>
+
 </head>
 <body>
-    <h1>Hi friend
-    </h1>
-</body>
+    <table>
+                                              <!-- HEADER -->
+        <tr id="header">
+            <td><i class="fa-solid fa-bars"></i></td>
+            <th colspan="1">Name</th>
+            <th><a href="#exp">Experience</th>
+            <th><a href="#ach">Achievements</th>
+            <th><a href="#footer">Contact</th>
+
+        </tr>
+                                            <!-- ABOUT OURSELF -->
+        <tr id="about">
+            <td colspan="3"><img height="400px" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="No image" ></td>
+            <td colspan="3" style="width:50%;"><h1>Hi, My name is Deep</h1>
+                <br>
+                <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio odit quam minima vero omnis, reprehenderit ipsa sequi ea deserunt fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, dolore.<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, illum.Accusantium consectetur, ex eligendi totam omnis voluptatum maiores esse, sapiente facere rem aut non quae!</p>
+            
+                </td>
+        </tr>
+                                        <!-- EXPERIENCE -->
+        <tr id="exp">
+            <td colspan="6">Experience</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2015-2022</td>
+            <td>Front-end engineer</td>
+            <td colspan="3" style="font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium maxime nihil animi sequi ipsa voluptas voluptate tempore.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2015-2022</td>
+            <td>Front-end engineer</td>
+            <td colspan="3"  style="font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium maxime nihil animi sequi ipsa voluptas voluptate tempore.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2015-2022</td>
+            <td>Front-end engineer</td>
+            <td colspan="3"  style="font-size: 1rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus praesentium maxime nihil animi sequi ipsa voluptas voluptate tempore.</td>
+        </tr>
+                                        <!-- ACHIEVEMENTS -->
+
+         <tr id="ach">
+            <td colspan="6">Achievement</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2015</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2017</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+        <tr class="deep">
+            <td>2019</td>
+            <td colspan="5">Won 1st price among 10000 students in coding competetion.</td>
+        </tr>
+
+    </table>
+    <table>
+        <tr id="footer">
+        <th><a href="https://github.com/"><i class="fa-brands fa-github fa-2x"></i></a></th>
+        <th><a href="https://linkedin.in/"><i class="fa-brands fa-linkedin-in fa-3x"></i></a></th>
+        <th><i class="fa-solid fa-phone fa-2x"></i><br>+91 8155839409</td>
+        <th><a href="https://w3schools.com"><i class="fa-solid fa-globe fa-3x"></i></a></th>
+        <th><a href="mailto: sonideep092003@gmail.com"><i class="fa-solid fa-envelope fa-3x"></i></a></th>
+
+    </tr>
+</table>
 </html>
